--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -7,8 +7,6 @@
       "jasmine"
     ]
   },
-  "include": [
-    "src/**/*.spec.ts",
-    "src/**/*.d.ts"
-  ]
+  "files": ["src/test.ts", "src/polyfills.ts"],
+	"include": ["src/**/*.spec.ts", "src/**/*.d.ts"]
 }
